@startuml

title __AGENCIAVIAJES's Class Diagram__\n

  namespace com.example.agenciaviajes {
    class com.example.agenciaviajes.Boleto {
        - destino : String
        - fecha : String
        - fechaRegreso : String
        - id : int
        - nombre : String
        - precio : float
        - tipo : int
        + Boleto()
        + Boleto()
        + Boleto()
        + calcularDescuento()
        + calcularIVA()
        + calcularPrecio()
        + calcularTotal()
        + getDestino()
        + getFecha()
        + getFechaRegreso()
        + getId()
        + getNombre()
        + getPrecio()
        + getTipo()
        + imprimirBoleto()
        + setDestino()
        + setFecha()
        + setFechaRegreso()
        + setId()
        + setNombre()
        + setPrecio()
        + setTipo()
    }
  }
  

  namespace com.example.agenciaviajes {
    class com.example.agenciaviajes.DatePickerFragment {
        - listener : OnDateSetListener
        {static} + newInstance()
        + onCreateDialog()
        + setListener()
    }
  }
  

  namespace com.example.agenciaviajes {
    class com.example.agenciaviajes.MainActivity {
        - btnConfirmar : Button
        - btnRegresar : Button
        - destino : String
        - lblFechaRegreso : TextView
        - lblFechaRegresoBoleto : TextView
        - spnDestinos : Spinner
        - spnTipo : Spinner
        - tipo : String
        - trFechaRegreso : TableRow
        - txtDescuento : EditText
        - txtDestinoBoleto : EditText
        - txtEdad : EditText
        - txtFechaPartida : EditText
        - txtFechaPartidaBoleto : EditText
        - txtFechaRegreso : EditText
        - txtFechaRegresoBoleto : EditText
        - txtImpuesto : EditText
        - txtNombre : EditText
        - txtNombreBoleto : EditText
        - txtNumero : EditText
        - txtPrecio : EditText
        - txtPrecioBoleto : EditText
        - txtSubtotal : EditText
        - txtTipoViaje : EditText
        - txtTotal : EditText
        - vistaPrincipal : ScrollView
        - vistaSecundaria : TableLayout
        # onCreate()
        - showDatePicker()
    }
  }
  

  com.example.agenciaviajes.DatePickerFragment -up-|> androidx.fragment.app.DialogFragment
  com.example.agenciaviajes.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.agenciaviajes.MainActivity o-- com.example.agenciaviajes.Boleto : boleto


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
